style: add logo

--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,10 @@
     <div class="container">
       <!-- Header -->
       <header class="header">
-        <h1>📚 University Library Management System</h1>
+        <div class="header-title">
+          <img src="/src/images/logo.png" alt="Library Logo" class="logo" />
+          <h1>Library Management System - Aquaculture Unit</h1>
+        </div>
         <div class="header-stats" id="headerStats">
           <div class="stat-card">
             <div class="stat-value" id="totalStudents">0</div>
